# Tigrinya-Tokenizer

./: README.md  pyproject.toml
outputs/tokenizer/: tokenizer.json
src/tigrinya_tokenizer/: tokenizer.py
src/tigrinya_tokenizer.egg-info/: PKG-INFO  SOURCES.txt
test/: test_tokenizer_tigrinya.py
tokenizer/: train_bpe.py
